--- a/src/app/clients/clients/clients.component.html
+++ b/src/app/clients/clients/clients.component.html
@@ -1,6 +1,6 @@
 <!-- Main Container -->
-<div class="flex-col justify-between w-full py-12 sm:px-4 h-4/5">
-  <div class="flex justify-between">
+<div class="flex-col justify-between w-full sm:py-12 sm:px-4 h-4/5">
+  <div class="flex justify-between mt-4 mb-4 sm:m-0">
     <!-- Title -->
     <div class="flex items-center space-x-2 sm:space-x-4">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 sm:w-12 sm:h-12 text-brand" fill="none" viewBox="0 0 24 24"
