--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center h-full space-y-4 sm:w-full ">
+<div class="flex flex-col items-center justify-center h-full space-y-4 py-14 sm:w-full">
   <!-- Client Table Desktop only -->
   <table *ngIf="((clients$ |async)?.length !== 0) && !(loader$ | async)"
     class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg">
@@ -35,8 +35,9 @@
             </svg>
           </td>
           <td class="p-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 m-auto cursor-pointer hover:text-green-900"
-              fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <svg (click)="confirmDelete(client.id)" xmlns="http://www.w3.org/2000/svg"
+              class="w-6 h-6 m-auto cursor-pointer hover:text-green-900" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
             </svg>
@@ -53,7 +54,7 @@
   <div class="flex flex-col h-screen space-y-2 overflow-y-auto sm:hidden"
     *ngIf="((clients$ |async)?.length !== 0) && !(loader$ | async)">
 
-    <div [ngClass]="{'bg-gray-200': i % 2 === 0}" class="flex flex-col justify-center p-2 "
+    <div [ngClass]="{'bg-gray-200': i % 2 === 0}" class="flex flex-col justify-center"
       *ngFor="let client of clients$ |async; let i = index;">
       <img class="w-12 mx-auto mb-12" src="{{client.logo}}" alt="">
       <div><span class="font-bold">Nombre:</span> {{client.name}}</div>
