--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <!-- Side Nav -->
 <div [ngClass]="{'w-14': !isOpen, 'sm:w-60' : isOpen}" (mouseenter)="toggleSideBar()" (mouseleave)="toggleSideBar()"
-  class="flex flex-col items-center w-12 h-full transition-all ease-in sm:w-12 bg-brand">
+  class="static top-0 left-0 flex flex-col items-center w-12 h-screen transition-all ease-in sm:w-12 bg-brand">
 
   <!-- Logo -->
   <img class="mb-8 w-14 sm:w-40" src="assets/img/logo-white.png" alt="Mejor en Bici">
