--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -28,8 +28,9 @@
           <td class="p-2"> 0 </td>
           <td class="p-2"> 0 </td>
           <td class="p-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 m-auto cursor-pointer hover:text-green-900"
-              fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <svg [routerLink]="['/clientes', client.id]" xmlns="http://www.w3.org/2000/svg"
+              class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900" fill="none"
+              viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
             </svg>
