--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -25,10 +25,20 @@
             client.meb_admin?.lastName) : 'Sin asignar'}} </td>
           <td class="p-2"> {{client.super_admin_client ? (client.super_admin_client?.firstName + ' '+
             client.super_admin_client?.lastName) : 'Sin asignar'}} </td>
-          <td class="p-2"> 0 </td>
+          <td class="flex p-2 space-x-2"> <span>{{client.offices?.length}}</span>
+            <div [routerLink]="['/clientes', client.id, 'crear-sede']"
+              class="flex items-center justify-center space-x-2 cursor-pointer text-brand hover:text-green-900">
+              <span>Crear sede</span>
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+            </div>
+          </td>
           <td class="p-2"> 0 </td>
           <td class="p-2">
-            <svg [routerLink]="['/clientes', client.id]" xmlns="http://www.w3.org/2000/svg"
+            <svg [routerLink]="['/clientes', client.id, 'editar']" xmlns="http://www.w3.org/2000/svg"
               class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900" fill="none"
               viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -66,7 +76,7 @@
       <div><span class="font-bold">Súper administrador cliente:</span> {{client.super_admin_client ?
         (client.super_admin_client?.firstName + ' '+
         client.super_admin_client?.lastName) : 'Sin asignar'}}</div>
-      <div><span class="font-bold">Sedes:</span> 0</div>
+      <div><span class="font-bold">Sedes:</span> {{client.offices?.length}}</div>
       <div><span class="font-bold">Usuarios:</span> 0</div>
     </div>
 
