--- a/src/app/clients/clients/clients.component.html
+++ b/src/app/clients/clients/clients.component.html
@@ -1,5 +1,5 @@
 <!-- Main Container -->
-<div class="flex-col justify-between w-full sm:py-12 sm:px-4">
+<div class="flex-col justify-between w-full sm:py-12 h-5/6 sm:px-4">
   <div class="flex justify-between mt-12 mb-12 sm:m-0">
     <!-- Title -->
     <div class="flex items-center space-x-2 sm:space-x-4">
@@ -12,7 +12,7 @@
     </div>
     <!-- End Title -->
     <!-- Add Client Btn -->
-    <button routerLink="nuevo-cliente" class="btn-primary hover:bg-green-900">
+    <button *ngIf="showAddBtn" routerLink="nuevo-cliente" class="btn-primary hover:bg-green-900">
       <span class="hidden sm:flex">Crear nuevo cliente</span>
       <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
