--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -16,6 +16,16 @@
     <a *ngIf="isOpen" class="hidden sm:flex" routerLink="clientes">Clientes</a>
   </div>
   <!-- End Links -->
+  <!-- Links -->
+  <div class="flex items-center justify-center w-full space-x-4 text-lg text-white cursor-pointer hover:text-green-900">
+    <svg routerLink="equipo" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 outline-none focus:outline-none"
+      fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+    </svg>
+    <a *ngIf="isOpen" class="hidden sm:flex" routerLink="equipo">Equipo</a>
+  </div>
+  <!-- End Links -->
 
 </div>
 <!-- End Side Nav -->
